Split the testGetByPrefix case into more specific unit test, keep the deprecated Prop VFS's Test. Correct the order of the code, extract the universal arrangment statements for the test cases.